k8s/deployment.yaml
apiVersion: v1
kind: Service 
metadata: 
  name: stanza
spec: 
  ports: 
  - port: 80
    targetPort: 9000
    protocol: TCP
    name: http2
  selector: 
    app: stanza
  type: LoadBalancer

---
apiVersion: v1
kind: Service
metadata:
  name: http-guestbook
spec:
  ports:
  - port: 80
    targetPort: 9001
    protocol: TCP
    name: http
  selector:
    app: stanza
  type: NodePort

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
  name: ingress-stanza
spec: 
  backend: 
    serviceName: http-stanza
    servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata: 
  name: stanza
spec:
  replicas: 1
  template: 
    metadata:
      labels:
        app: stanza
    spec: 
      containers: 
      - name: esp
        image: gcr.io/endpoints-release/endpoints-runtime:1
        args: [
          "--http2_port=9000",
          "--http_port=9001",
          "--service=SERVICE_NAME",
          "--version=SERVICE_CONFIG_ID",
          "--backend=grpc://127.0.0.1:8000"
        ]
        ports:
        - containerPort: 9000
        - containerPort: 9001
        livenessProbe:
          httpGet:
            path: /health
            port: 9001
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet: 
            path: /health
            port: 9001
          initialDelaySeconds: 3
          periodSeconds: 3
      - name: stanza
        image: gcr.io/PROJECT_ID/grpc-guestbook:BUILD_ID
        ports: 
          - containerPort: 8000
